--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap");
 
 * {
   margin: 0;
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   height: 100vh;
 }
 
@@ -102,6 +102,8 @@ h3 {
   padding: 20px;
   /* padding: 20px 0 10px; */
   /* position: relative; */
+  width: 90%;
+  overflow: hidden;
 }
 
 .book .close {
@@ -116,7 +118,11 @@ h3 {
 }
 
 .bookCover {
-  margin: 10px 0 10px 0px ;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  max-width: 100%;
+  height: auto;
 }
 
 .form,
@@ -224,4 +230,3 @@ h3 {
     font-size: 1.5rem;
   }
 }
-
