--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ h3 {
 
 .container {
   width: 100%;
-  max-width: 960px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
   text-align: center;
@@ -87,12 +87,12 @@ h3 {
 }
 
 .books {
-  /* display: grid;
-  grid-template-columns: repeat(2, 1fr); */
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  /* display: flex; */
   /* flex-flow: column wrap; */
-  flex-wrap: wrap;
-  justify-content: space-evenly;
+  /* flex-wrap: wrap; */
+  /* justify-content: space-evenly; */
   gap: 30px;
 }
 
@@ -104,6 +104,11 @@ h3 {
   /* position: relative; */
   width: 90%;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: stretch;
+  justify-content: space-evenly;
 }
 
 .book .close {
@@ -117,12 +122,13 @@ h3 {
   margin: 20px;
 }
 
-.bookCover {
+.cover {
   border: 1px solid #ddd;
   border-radius: 4px;
   padding: 5px;
   max-width: 100%;
   height: auto;
+  object-fit: fill;
 }
 
 .form,
