--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -38,7 +38,7 @@ h3 {
 
 .container {
   width: 100%;
-  max-width: 1200px;
+  max-width: 1400px;
   margin: 0 auto;
   padding: 0 20px;
   text-align: center;
@@ -48,13 +48,20 @@ h3 {
   background-color: #f4f4f4;
   margin: 10px 0;
   padding: 20px;
-  width: 90%;
+  width: 95%;
   overflow: hidden;
   display: flex;
   flex-direction: column;
   gap: 10px;
   align-items: stretch;
   justify-content: space-evenly;
+  min-width: 200px;
+  transition: box-shadow 0.2s ease-in-out;
+}
+
+.book:hover {
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 }
 
 .book .close {
