--- a/src/components/Details/Details.module.css
+++ b/src/components/Details/Details.module.css
@@ -1,3 +1,13 @@
 .description {
   white-space: pre-line;
 }
+
+.bookCover {
+  max-width: 100%;
+  height: auto;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 300px;
+  overflow: hidden;
+}
