updateBook also refurbish image in Cloudinary

--- a/src/components/Edit/Edit.module.css
+++ b/src/components/Edit/Edit.module.css
@@ -1,7 +1,7 @@
 #editHeader {
   font-family: Verdana, sans-serif;
   font-size: x-large;
-  margin-bottom: 0;
+  margin-bottom: 12px;
   color: firebrick;
 }
 
