--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -28,3 +28,11 @@
     font-size: 1.5rem;
   }
 }
+
+.search {
+  display: inline-block;
+  text-align: center;
+  width: 18rem;
+  height: 3rem;
+  border-radius: 12px;
+}
